fix datatype issues

--- a/docs/mgr/CompressionOptimizerCUDA.tex
+++ b/docs/mgr/CompressionOptimizerCUDA.tex
@@ -967,10 +967,27 @@ Dekompresja przebiega na tyle prosto, ¿e ograniczê siê do krótkiego opisu bez ps
 \item Jeœli to nie koniec danych do dekompresji, wracamy do punktu pierwszego
 \end{enumerate}
 
-
 \chapter{Wyniki}
 
+\section{Platforma testowa}
+\section{Dane}
+\subsection{Rzeczywiste}
+\subsubsection{Pomiar parametrów dzia³ania komputera MAC}
+\subsubsection{Dane z High Frequency Trading NYSE}
+\subsection{Wygenerowane}
+\subsubsection{Czas}
+\subsubsection{Pattern A}
+\subsubsection{Pattern B}
+
+\section{Badanie wspó³czynnika kompresji}
+\section{Wygenerowane schematy}
+\section{Szybkoœæ dzia³ania}
+\section{Porównanie}
+
 \chapter{Podsumowanie}
+
+\section{Konkluzja}
+\section{Przysz³e prace}
 
 
 %-----------Koniec czêœci zasadniczej-----------
